--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: android
 android:
     components:
-    - tools
-    - platform-tools
-    - build-tools-29.0.0
-    - android-28
+        - tools
+        - platform-tools
+        - build-tools-29.0.0
+        - android-28
+    licenses:
+        - 'android-sdk-preview-license-52d11cd2'
+        - 'android-sdk-license-.+'
+        - 'google-gdk-license-.+'
