--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,16 @@ android:
         - platform-tools
         - build-tools-29.0.0
         - android-28
-    licenses:
-        - 'android-sdk-preview-license-52d11cd2'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
+licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+before_install:
+    - pwd
+    - ls -la
+    - yes | sdkmanager "platforms;android-28"
+install:
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "cmake;3.6.4111459"
+  - echo y | sdkmanager "lldb;3.1"
