--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ before_install:
     - yes | sdkmanager "platforms;android-28"
 install:
   - echo y | sdkmanager "ndk-bundle"
-  - echo y | sdkmanager "cmake;3.6.4111459"
+  - echo y | sdkmanager "cmake;3.10.2"
   - echo y | sdkmanager "lldb;3.1"
