--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,9 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/android:api-28-alpha
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
+    working_directory: ~/ci-playground
 
     environment:
       # Customize the JVM maximum heap limit
