--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,34 @@ android {
         }
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+        }
+
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        development {
+            initWith debug
+            applicationIdSuffix ".development"
+        }
+
+        qa {
+            initWith debug
+            applicationIdSuffix ".qa"
+        }
+
+        staging {
+            initWith debug
+            applicationIdSuffix ".staging"
+        }
+
+        production {
+            initWith release
+        }
+
     }
     externalNativeBuild {
         cmake {
