--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,13 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC16"
+}
+
 allprojects {
     apply from: "$rootDir/ktlint.gradle"
+    apply from: "$rootDir/detekt.gradle"
 
     repositories {
         google()
