--- a/config/build-config.gradle
+++ b/config/build-config.gradle
@@ -15,26 +15,31 @@ buildscript {
 import org.ajoberstar.grgit.Grgit
 
 ext {
+
     git = Grgit.open(currentDir: projectDir)
 
     branch = System.getenv("BITRISE_GIT_BRANCH")
-    if (branch != null && branch.contains("/")) {
-        versionAppName = branch.split("/")[1]
+
+    if (branch != null) {
         versionAppCode = System.getenv("BITRISE_BUILD_NUMBER") as Integer
     } else {
-        // if we use only git.describe() we may get version in wrong format e.g 1.2.5-1-abcfr
-        // to avoid this situation and always received version in format x.y.z we need to add below logic
-        list = git.tag.list()
-        name = list[list.size() - 1].fullName
-        if (name != null && name.split("/")[2] != null) {
-            versionAppName = name.split("/")[2]
-        } else {
-            versionAppName = git.describe()
-        }
         versionAppCode = git.log().size()
     }
 
+    list = git.tag.list()
+    if(list.size() == 0) {
+        name = "refs/tags/0.1.0" // initial app version
+    } else {
+        name = list[list.size() - 1].fullName // examp. refs/tags/1.5.1
+    }
+    if (name != null && name.split("/")[2] != null) {
+        versionAppName = name.split("/")[2] + "-" + versionAppCode // to get 1.5.1
+    } else {
+        versionAppName = git.describe() + "-" + versionAppCode // to get 1.5.1-27-g1ac5fd2
+    }
+
     releaseNote = git.head().getShortMessage()
+
 }
 
 task getAppInfo {
